# sledge-eval

./: .gitignore  LEADERBOARD.md  README.md  eval.py  eval_gemini.py  eval_latency.py  eval_openrouter.py  eval_server.py  example_usage.py  generate_leaderboard.py  pyproject.toml  run_eval.sh
examples/: ministral_evaluator_demo.py  ministral_tool_calling_demo.py  text_evaluator_demo.py
reports/Hammer2.1-3b/: report_20260116_125644.json  report_20260116_125644.md
reports/LiquidAI_LFM2.5-1.2B-Instruct-GGUF/: report_20260110_085726.json  report_20260110_085726.md  report_20260118_150629.json  report_20260118_150629.md
reports/Ministral-3-3B-Reasoning-2512-Q4_K_M/: report_20260110_091735.json  report_20260110_091735.md
reports/Qwen3-14B-UD-Q6_K_XL/: report_20260108_161740.json  report_20260108_161740.md
reports/Qwen_Qwen3-VL-8B-Instruct-GGUF/: report_20251210_154446.json  report_20251210_154446.md
reports/Qwen_Qwen3-VL-8B-Thinking-GGUF/: report_20251210_152656.json  report_20251210_152656.md
reports/Unsloth-Qwen3-4B-Thinking-2507-F16/: report_20260114_113454.json  report_20260114_113454.md
reports/gemini-2.5-flash-lite/: report_20260117_103614.json  report_20260117_103614.md
reports/latency/: latency_LiquidAI_LFM2.5-1.2B-Instruct-GGUF_20260118_162401.json  latency_LiquidAI_LFM2.5-1.2B-Instruct-GGUF_20260118_162401.md  latency_LiquidAI_LFM2.5-1.2B-Instruct-GGUF_20260118_162535.json  latency_LiquidAI_LFM2.5-1.2B-Instruct-GGUF_20260118_162535.md
src/sledge_eval/: __init__.py  anki_evaluator.py  (+14 more)
tests/: __init__.py  test_evaluator.py  test_ministral.py
(+28 files in other folders)
